Match update / edlition > if playin / playoff's been generated, PUT req is blocked
